--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -5,3 +5,10 @@
 
 .navbar-brand img
   width: 2rem
+
+.stretched-links-row
+   @extend .row
+   @extend .position-relative
+
+   &:hover
+    background-color: $light
