--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,23 +2,22 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title= "#{@page_title} ".strip + ' - Live - Feuerwehrsportwettkämpfe'
+    %title= "#{@page_title} ".strip + ' - Live - Feuerwehrsport'
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
   %body
-    .alert-flash
-      - flash.each do |name, msg|
-        - msg = t("alerts.#{msg}", default: msg)
-        - if name == 'alert'
-          .alert.alert-danger= msg
-        - else
-          .alert.alert-info= msg
-    %nav.navbar.navbar-expand-lg.sticky-top.shadow-sm.bg-light
+    %nav.navbar.navbar-expand-lg.bg-light.shadow-sm
       .container
-        %a.navbar-brand{ href: root_path, title: 'Startseite' }
-          = image_tag 'logo.png'
-
+        = render 'nav_menu'
+    .container.mt-3
+      .alert-flash
+        - flash.each do |name, msg|
+          - msg = t("alerts.#{msg}", default: msg)
+          - if name == 'alert'
+            .alert.alert-danger= msg
+          - else
+            .alert.alert-info= msg
     .mt-3.container= yield
