--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -20,5 +20,5 @@
   .col-md-4
     .card
       .card-body
-        %h3 Benutzerkonto entfernen
-        = link_to 'Jetzt löschen', registration_path(resource_name), data: { turbo_confirm: 'Benutzerkonto wirklich entfernen?', "turbo-method": :delete }, class: "btn btn-danger"
+        %h4 Benutzerkonto entfernen
+        = link_to 'Jetzt löschen', registration_path(resource_name), data: { turbo_confirm: 'Benutzerkonto wirklich entfernen?', "turbo-method": :delete }, class: "btn btn-danger btn-sm"
