Wettkampf weiter gestalten

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -3,6 +3,8 @@
 @import fontawesome/fontawesome
 @import fontawesome/regular
 
+@import "easymde/dist/easymde.min"
+
 .navbar-brand img
   width: 2rem
 
