--- a/app/views/application/_nav_menu.haml
+++ b/app/views/application/_nav_menu.haml
@@ -4,13 +4,12 @@
   %span.navbar-toggler-icon
 #navbarSupportedContent.collapse.navbar-collapse
   %ul.navbar-nav.me-auto.mb-2.mb-lg-0
+    %li.nav-item
+      = active_link_to('neuer Wettkampf', new_competitions_creations_path, class: 'nav-link')
     - unless user_signed_in?
       %li.nav-item
         = active_link_to('Anmelden', new_user_session_path, class: 'nav-link')
     - else
-      %li.nav-item
-        = active_link_to('Abmelden', destroy_user_session_path, data: { "turbo-method": :delete }, class: 'nav-link')
-
       %li.nav-item.dropdown
         %a.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", href: "#", role: "button"}
           Benutzer
