--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -1,17 +1,45 @@
 
 .row
-  .col-md-8
+  .col-md-8.mb-2
     .card
       .card-header
         = page_title(@competition.name, class: 'display-3')
         %p.lead= "#{l @competition.date} - #{@competition.locality}"
       .card-body
         != @competition.description_html
-  .col-md-4
+  .col-md-4.mb-2
     .card
       .card-body
         .d-grid.gap-2.col-10.mx-auto
           = link_to 'Bearbeiten', url_for(action: :edit), class: 'btn btn-light btn-sm'
-          = link_to 'Dokument hinzufügen', url_for(action: :edit), class: 'btn btn-light btn-sm'
+          = link_to 'Dokument hinzufügen', new_competition_document_path(competition_id: @competition.slug), class: 'btn btn-light btn-sm'
           = link_to 'Disziplinen verwalten', url_for(action: :edit), class: 'btn btn-light btn-sm'
           = link_to 'Löschen', url_for(action: :edit), class: 'btn btn-danger btn-sm'
+
+- if @competition.documents.exists?
+  .row
+    .col-md-8.mb-2
+      .card
+        .card-header Dokumente
+        %ul.list-group.list-group-flush
+          - @competition.documents.each do |document|
+            %li.list-group-item
+              - if can?(:manage, document)
+                .float-end
+                  .btn-group
+                    = link_to(edit_competition_document_path(competition_id: @competition.slug, id: document.id), class: "btn btn-light btn-sm") do
+                      .far.fa-edit
+                    = link_to(competition_document_path(competition_id: @competition.slug, id: document.id), class: "btn btn-light btn-sm", data: { turbo_confirm: 'Dokument wirklich entfernen?', "turbo-method": :delete }) do
+                      .far.fa-trash
+              = link_to rails_blob_path(document.file, disposition: "attachment") do
+                .row
+                  .col-3
+                    - if document.file.representable?
+                      = image_tag document.file.representation(resize_to_limit: [100, 100])
+                  .col-9
+                    = document.title
+                    .sm= number_to_human_size document.file.byte_size
+                    .sm= document.file.filename
+                    .sm Stand: #{l document.updated_at}
+
+
