--- a/app/views/competitions/new.html.haml
+++ b/app/views/competitions/new.html.haml
@@ -2,7 +2,7 @@
 
 .row
   .col-md-8
-    = simple_form_for(@competition, url: competitions_creations_path) do |f|
+    = simple_form_for(@competition, url: competitions_path) do |f|
       .card
         .card-body
           = f.error_notification
