--- a/app/views/competitions/showings/show.html.haml
+++ b/app/views/competitions/showings/show.html.haml
@@ -9,12 +9,21 @@
         != @competition.description_html
   .col-md-4.mb-2
     .card
+      - unless @competition.visible?
+        .card-header.text-bg-warning
+          .d-grid.gap-2.col-10.mx-auto
+            .text-center
+              .far.fa-eye-slash
+              Nicht öffentlich sichtbar
+            = link_to 'Sichtbarkeit bearbeiten', edit_competition_visibility_path, class: 'btn btn-light btn-sm'
       .card-body
         .d-grid.gap-2.col-10.mx-auto
-          = link_to 'Bearbeiten', url_for(action: :edit), class: 'btn btn-light btn-sm'
-          = link_to 'Dokument hinzufügen', new_competition_document_path(competition_id: @competition.slug), class: 'btn btn-light btn-sm'
-          = link_to 'Disziplinen verwalten', url_for(action: :edit), class: 'btn btn-light btn-sm'
-          = link_to 'Löschen', url_for(action: :edit), class: 'btn btn-danger btn-sm'
+          = link_to 'Bearbeiten', edit_competition_editing_path, class: 'btn btn-light btn-sm'
+          = link_to 'Sichtbarkeit bearbeiten', edit_competition_visibility_path, class: 'btn btn-light btn-sm'
+          = link_to 'Dokument hinzufügen', new_competition_document_path, class: 'btn btn-light btn-sm'
+          = link_to 'Löschen', new_competition_deletion_path, class: 'btn btn-danger btn-sm'
+      .card-footer.text-center.p-0
+        = image_tag qrcode(competition_show_url)
 
 - if @competition.documents.exists?
   .row
@@ -27,9 +36,9 @@
               - if can?(:manage, document)
                 .float-end
                   .btn-group
-                    = link_to(edit_competition_document_path(competition_id: @competition.slug, id: document.id), class: "btn btn-light btn-sm") do
+                    = link_to(edit_competition_document_path(id: document.id), class: "btn btn-light btn-sm") do
                       .far.fa-edit
-                    = link_to(competition_document_path(competition_id: @competition.slug, id: document.id), class: "btn btn-light btn-sm", data: { turbo_confirm: 'Dokument wirklich entfernen?', "turbo-method": :delete }) do
+                    = link_to(competition_document_path(id: document.id), class: "btn btn-light btn-sm", data: { turbo_confirm: 'Dokument wirklich entfernen?', "turbo-method": :delete }) do
                       .far.fa-trash
               = link_to rails_blob_path(document.file, disposition: "attachment") do
                 .row
