--- a/spec/fixtures/views/User_GET_users_edit_renders_user_form/view.html
+++ b/spec/fixtures/views/User_GET_users_edit_renders_user_form/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Benutzerkontos bearbeiten - Live - Feuerwehrsport</title>
+<title>Benutzerkontos bearbeiten - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -21,7 +21,7 @@
 <div class='collapse navbar-collapse' id='navbarSupportedContent'>
 <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
 <li class='nav-item'>
-<a data-turbo-method="delete" class="nav-link" href="/users/sign_out">Abmelden</a>
+<a class="nav-link" href="/competitions/new">neuer Wettkampf</a>
 </li>
 <li class='nav-item dropdown'>
 <a aria-expanded='false' class='nav-link dropdown-toggle' data-bs-toggle='dropdown' href='#' role='button'>
