--- a/spec/fixtures/views/User_GET_users_sign_in_renders_the_login_form/view.html
+++ b/spec/fixtures/views/User_GET_users_sign_in_renders_the_login_form/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Anmelden - Live - Feuerwehrsport</title>
+<title>Anmelden - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -20,6 +20,9 @@
 </button>
 <div class='collapse navbar-collapse' id='navbarSupportedContent'>
 <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
+<li class='nav-item'>
+<a class="nav-link" href="/competitions/new">neuer Wettkampf</a>
+</li>
 <li class='nav-item'>
 <a class="nav-link active" aria-current="page" href="/users/sign_in">Anmelden</a>
 </li>
