--- a/app/views/competitions/showings/show.html.haml
+++ b/app/views/competitions/showings/show.html.haml
@@ -16,13 +16,15 @@
               .far.fa-eye-slash
               Nicht öffentlich sichtbar
             = link_to 'Sichtbarkeit bearbeiten', edit_competition_visibility_path, class: 'btn btn-light btn-sm'
-      .card-body
-        .d-grid.gap-2.col-10.mx-auto
-          = link_to 'Bearbeiten', edit_competition_editing_path, class: 'btn btn-light btn-sm'
-          = link_to 'Sichtbarkeit bearbeiten', edit_competition_visibility_path, class: 'btn btn-light btn-sm'
-          = link_to 'Dokument hinzufügen', new_competition_document_path, class: 'btn btn-light btn-sm'
-          = link_to 'Löschen', new_competition_deletion_path, class: 'btn btn-danger btn-sm'
-      .card-footer.text-center.p-0
+      - if can?(:edit, @competition) || true
+        .card-body
+          .d-grid.gap-2.col-10.mx-auto
+            = link_to 'Bearbeiten', edit_competition_editing_path, class: 'btn btn-light btn-sm'
+            = link_to 'Sichtbarkeit bearbeiten', edit_competition_visibility_path, class: 'btn btn-light btn-sm'
+            = link_to 'Dokument hinzufügen', new_competition_document_path, class: 'btn btn-light btn-sm'
+            = link_to 'Löschen', new_competition_deletion_path, class: 'btn btn-danger btn-sm'
+      .card-footer.text-center.p-0.pt-3
+        %code.small= link_to(competition_show_url, competition_show_url)
         = image_tag qrcode(competition_show_url)
 
 - if @competition.documents.exists?
