--- a/spec/fixtures/views/User_GET_users_sign_in_renders_the_login_form/view.html
+++ b/spec/fixtures/views/User_GET_users_sign_in_renders_the_login_form/view.html
@@ -9,8 +9,8 @@
 <link rel="stylesheet" href="/assets/application.css" data-turbo-track="reload" />
 <script src="/assets/application.js" data-turbo-track="reload" defer="defer"></script>
 </head>
-<body>
-<nav class='navbar navbar-expand-lg bg-light shadow-sm'>
+<body class='bg-light'>
+<nav class='navbar navbar-expand-lg bg-secondary-subtle shadow-sm'>
 <div class='container'>
 <a class='navbar-brand' href='/' title='Startseite'>
 <img src="/assets/logo.png" />
@@ -21,7 +21,10 @@
 <div class='collapse navbar-collapse' id='navbarSupportedContent'>
 <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
 <li class='nav-item'>
-<a class="nav-link" href="/competitions/new">neuer Wettkampf</a>
+<a class="nav-link" href="/competitions/new">Wettkampf anlegen</a>
+</li>
+<li class='nav-item'>
+<a class="nav-link" href="/info">Über feusport.de</a>
 </li>
 <li class='nav-item'>
 <a class="nav-link active" aria-current="page" href="/users/sign_in">Anmelden</a>
