--- a/app/views/application/_nav_menu.haml
+++ b/app/views/application/_nav_menu.haml
@@ -12,7 +12,9 @@
   - else
     %ul.navbar-nav.me-auto.mb-2.mb-lg-0
       %li.nav-item
-        = active_link_to('neuer Wettkampf', new_competition_path, class: 'nav-link')
+        = active_link_to('Wettkampf anlegen', new_competition_path, class: 'nav-link')
+      %li.nav-item
+        = active_link_to('Über feusport.de', info_path, class: 'nav-link')
       - unless user_signed_in?
         %li.nav-item
           = active_link_to('Anmelden', new_user_session_path, class: 'nav-link')
