--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,8 +8,8 @@
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
-  %body
-    %nav.navbar.navbar-expand-lg.bg-light.shadow-sm
+  %body.bg-light
+    %nav.navbar.navbar-expand-lg.bg-secondary-subtle.shadow-sm
       .container
         = render 'nav_menu'
     .container.mt-3
