--- a/app/views/competitions/showings/show.html.haml
+++ b/app/views/competitions/showings/show.html.haml
@@ -25,6 +25,9 @@
           - if can?(:destroy, @competition)
             = link_to 'Löschen', new_competition_deletion_path, class: 'btn btn-danger btn-sm'
           = social_share_button_tag
+          - if can?(:edit, @competition)
+            %hr
+            = link_to 'Disziplinen', competition_disciplines_path, class: 'btn btn-light btn-sm'
       .card-footer.text-center.p-0.pt-3
         %pre.small= link_to(competition_show_url.gsub(/https?:\/\//, ""), competition_show_url)
         = image_tag qrcode(competition_show_url)
