--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -8,8 +8,8 @@
           = f.error_notification
 
           .form-inputs
-            = f.input :email, autofocus: true, required: true, input_html: { autocomplete: "email" }
+            = f.input :email, autofocus: true, required: true, input_html: { autocomplete: 'email' }
           .btn-toolbar.mt-3
             = f.button :submit, 'Link zum Zurücksetzen zusenden', class: 'btn btn-primary'
   .col-md-4
-    = render "devise/shared/links"
+    = render 'devise/shared/links'
