--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -12,13 +12,13 @@
             = f.input :email
             - if devise_mapping.confirmable? && resource.pending_reconfirmation?
               %p Bestätigung erwartet: #{resource.unconfirmed_email}
-            = f.input :password, input_html: { autocomplete: "new-password" }, hint: "Freilassen, wenn keine Änderung gewünscht ist"
-            = f.input :password_confirmation, input_html: { autocomplete: "new-password" }
-            = f.input :current_password, input_html: { autocomplete: "current-password" }, hint: "Aktuelles Passwort, um Änderungen zu bestätigen"
+            = f.input :password, input_html: { autocomplete: 'new-password' }, hint: 'Freilassen, wenn keine Änderung gewünscht ist'
+            = f.input :password_confirmation, input_html: { autocomplete: 'new-password' }
+            = f.input :current_password, input_html: { autocomplete: 'current-password' }, hint: 'Aktuelles Passwort, um Änderungen zu bestätigen'
           .btn-toolbar.mt-3
             = f.button :submit, class: 'btn btn-primary'
   .col-md-4
     .card
       .card-body
         %h4 Benutzerkonto entfernen
-        = link_to 'Jetzt löschen', registration_path(resource_name), data: { turbo_confirm: 'Benutzerkonto wirklich entfernen?', "turbo-method": :delete }, class: "btn btn-danger btn-sm"
+        = link_to 'Jetzt löschen', registration_path(resource_name), data: { turbo_confirm: 'Benutzerkonto wirklich entfernen?', 'turbo-method': :delete }, class: 'btn btn-danger btn-sm'
