--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -14,4 +14,4 @@
         %li= link_to 'Bestätigungs-E-Mail nicht erhalten?', new_confirmation_path(resource_name)
 
       - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-        %li= link_to "Entsperr-E-Mail nicht erhalten?", new_unlock_path(resource_name)
+        %li= link_to 'Entsperr-E-Mail nicht erhalten?', new_unlock_path(resource_name)
