--- a/app/views/home/_development_card.html.haml
+++ b/app/views/home/_development_card.html.haml
@@ -2,8 +2,8 @@
   .card-header
     %h2.display-4 Entwicklung
     %p.lead Was steckt dahinter?
-   
-  .card-body
-    %p Die Quelltexte dieser Seite stehen unter der GPLv3 und können somit von dir eingesehen und für eigene Projekte verwendet werden, wenn du die GPLv3 dabei beachtest. Den Quellcode findest du #{link_to("auf Github", "https://github.com/Feuerwehrsport/feusport")}.
 
-    %p Als grundlegendes Framework wird Ruby on Rails mit einem PostgreSQL-Server verwendet. Im Live-Betrieb läuft es auf einem Debian-Linux-Server, welcher von der #{link_to("Lichtbit GmbH", "https://lichtbit.com")} zur Verfügung gestellt wird.
+  .card-body
+    %p Die Quelltexte dieser Seite stehen unter der GPLv3 und können somit von dir eingesehen und für eigene Projekte verwendet werden, wenn du die GPLv3 dabei beachtest. Den Quellcode findest du #{link_to('auf Github', 'https://github.com/Feuerwehrsport/feusport')}.
+
+    %p Als grundlegendes Framework wird Ruby on Rails mit einem PostgreSQL-Server verwendet. Im Live-Betrieb läuft es auf einem Debian-Linux-Server, welcher von der #{link_to('Lichtbit GmbH', 'https://lichtbit.com')} zur Verfügung gestellt wird.
